--- a/fobi/src/css/style.css
+++ b/fobi/src/css/style.css
@@ -3,6 +3,7 @@
 * {
 	box-sizing: border-box;
 	user-select: none;
+
 }
 
 html,
@@ -17,7 +18,8 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: Arial, sans-serif;
-	background: rgb(236, 236, 236);
+	/* background: rgb(236, 236, 236); */
+	background-color: black;
 	font-size: 16px;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
